--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-chart": "^2.5.1",
+    "@devexpress/dx-react-chart-bootstrap4": "^2.5.1",
+    "@devexpress/dx-react-chart-material-ui": "^2.5.1",
+    "@devexpress/dx-react-core": "^2.5.1",
     "@material-ui/core": "^4.9.7",
     "@material-ui/lab": "^4.0.0-alpha.46",
     "@testing-library/jest-dom": "^4.2.4",
@@ -11,9 +15,11 @@
     "axios": "^0.19.2",
     "react": "^16.13.0",
     "react-autocomplete": "^1.8.1",
+    "react-charts": "^2.0.0-beta.6",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
+    "recharts": "^1.8.5",
     "redux": "^4.0.5",
     "redux-form": "^8.3.0",
     "redux-form-material-ui": "^4.3.4",
